--- a/example/strategy.yaml
+++ b/example/strategy.yaml
@@ -1,40 +1,40 @@
 myStrategies:
 - code: "420102"
   subStrategies:
-  - span: 7
-    border:
+  - border:
+      span: 7
       min: -1
     msg: "天弘永利债券基金一周内跌幅超过1个点，记得加仓哟"
 
 - code: "519697"
   subStrategies:
-  - span: 7
-    border:
+  - border:
+      span: 7
       min: -2
     msg: "交银优势行业混合一周内跌幅超过2个点，记得加仓哟"
-  - span: 30
-    border:
+  - border:
+      span: 30
       max: 4
     msg: "交银优势行业混合一个月内涨幅超过4个点，记得减仓哟"
 
 - code: "400015"
   subStrategies:
-  - span: 365
-    border:
+  - border:
+      span: 365
       max: 50
-  - span: 182
     detectHPM:
+      span: 182
       min: -20
       max: 15
-  msg: "东方新能源汽车主题混合去年涨幅超过50%，半年内在负20个点和15个点之间振荡，先别买入哟"
+    msg: "东方新能源汽车主题混合去年涨幅超过50%，半年内在负20个点和15个点之间振荡，先别买入哟"
 
 - code: "164402"
   subStrategies:
-  - span: 30
-    border:
+  - border:
+      span: 30
       min: -10
     msg: "前海开源中航军工指数一个月内跌了10个点，建议买入哟"
-  - span: 30
-    border:
+  - border:
+      span: 30
       max: 10
     msg: "前海开源中航军工指数一个月内涨了10个点，建议卖出哟"
